# github_analyzer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  dev_analyzer.py  github_analyzer.py  jira_projects.txt.example  pyproject.toml  pytest.ini  repos.txt  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
.specify/memory/: constitution.md
frontend/: .gitkeep  README.md
github_export/: .gitkeep
specs/001-modular-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-modular-refactor/checklists/: requirements.md
specs/001-modular-refactor/contracts/: module-interfaces.md
specs/002-jira-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-jira-integration/checklists/: comprehensive.md  requirements.md
specs/002-jira-integration/contracts/: jira-api.md  module-interfaces.md
specs/003-jira-quality-metrics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-jira-quality-metrics/checklists/: comprehensive.md  requirements.md
specs/003-jira-quality-metrics/contracts/: csv-schemas.md
specs/004-github-repo-selection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-github-repo-selection/checklists/: comprehensive.md  requirements.md
specs/004-github-repo-selection/contracts/: github-api.yaml  internal-api.md
specs/005-smart-repo-filter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-smart-repo-filter/checklists/: comprehensive.md  requirements.md
specs/005-smart-repo-filter/contracts/: search-api.md
specs/006-security-recommendations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-security-recommendations/checklists/: requirements.md  security-qa.md
specs/006-security-recommendations/contracts/: security-api.md
specs/007-frontend-report-generator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-frontend-report-generator/checklists/: full-review.md  requirements.md
specs/007-frontend-report-generator/contracts/: perplexity-api.md
src/github_analyzer/: __init__.py
src/github_analyzer/analyzers/: __init__.py  commits.py  issues.py  jira_issues.py  jira_metrics.py  productivity.py  pull_requests.py  quality.py
src/github_analyzer/api/: __init__.py  client.py  jira_client.py  models.py
src/github_analyzer/cli/: __init__.py  main.py  output.py
tests/: conftest.py
tests/fixtures/: jira_responses.py
tests/integration/: test_analyzer_flow.py  test_interactive_selection.py  test_jira_flow.py  test_jira_metrics_flow.py  test_multi_source.py  test_smart_filter.py
(+40 files in other folders)
